# minecraft-server-host

./: .gitignore  .terraform.lock.hcl  .tool-versions  CLAUDE.md  Makefile  bootstrap.sh  dns.tf  flask_app.py  lambda.tf  license  main.tf  minecraft.tf  readme.rst  rollup.config.js  setup-unmined.sh  test_flask_app.py  variables.tf  webapp.tf
api/: .gitignore  Pipfile  conftest.py  flask_app.py  lambda_handler.py  package-lock.json  package.json  serverless.yml
api_old/: flask_app.py  package-lock.json
docs/: backup-setup-notes.rst  github-actions-aws-oidc.md  github-actions.md  map-build-config.rst  minecraftctl-enhancement-plan.md  minecraftctl-migration-plan.md  minecraftctl-plan.md
infra/: README.md
lambda/: CLAUDE.md
lambda/control/: .gitignore  .tool-versions  pyproject.toml  readme.rst  run_local.sh
lambda/control/app/: aws_utils.py  config.py  main.py
lambda/control/tests/: __init__.py  conftest.py  test_aws_utils.py  test_main.py
lambda/worlds/: package.json  pyproject.toml  requirements.txt
lambda/worlds/app/: index.mjs  main.py
lambda/worlds/tests/: __init__.py  test_main.py
minecraft-ui/: CLAUDE.md  package.json  pnpm-lock.yaml
minecraftctl/: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  install.sh
mock_server/: index.js
old/: setup-unmined.sh  variables.tf
packer/: CLAUDE.md  base.pkr.hcl  docker.pkr.hcl  minecraft.pkr.hcl  minecraft_jars.auto.pkrvars.hcl  readme.rst  ssh.pkr.hcl  virtual-box.hcl
src/: App.svelte  data.service.js
test/: data.service.test.js
ui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
ui_old/: rollup.config.js.tmpl  (+1 more)
(+330 files in other folders)
