[project]
name = "minecraft-control"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "mangum>=0.19.0",
]
[dependency-groups]
dev = [
    "awscli-local>=0.22.2",
    "boto3>=1.34",
    "fastapi[standard]>=0.115",
    "localstack>=4.9.2",
    "terraform-local",
]

[tool.uv]
