[project]
name = "minecraft-worlds"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "moto[s3]>=5.0.0",
    "terraform-local",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
